<resources>
    <string name="app_name">MobiFish</string>
    <string name="button">Button</string>
    <string name="login_button_text">Login</string>
    <string name="signUp_button_text">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="title_activity_fish">FishActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_fish_type">Type of Fish</string>
    <string name="hint_price">Price</string>
    <string name="hint_description">Description</string>
    <string name="hint_post_fish">Post Fish</string>
    <string name="contentDescription_new_fish_image">New Fish Image</string>

    <string-array name="user_category">
        <item>Fisher Man</item>
        <item>Customer</item>
    </string-array>
    <string name="title_activity_fisher_man">Fisher Man</string>
    <string name="view_cart">View Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_national_id_number">National ID Number</string>
    <string name="hint_user_category">Category</string>
    <string name="hint_user_account">Fisherman</string>

    <string name="db_node_users">users</string>
    <string name="user_category_fisher_man">FisherMan</string>
    <string name="user_category_customer">Customer</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="hint_fish_description">Fish Description</string>
    <string name="hint_fish_price">Fish Price per Kg</string>
    <string name="button_text_new_fish">New Fish</string>
    <string name="hint_fish_quantity">Quantity Available</string>
    <string name="menu_new_fish">New Fish</string>

</resources>
